--- a/TM.RestHour/Views/Reports/Index.cshtml
+++ b/TM.RestHour/Views/Reports/Index.cshtml
@@ -104,12 +104,12 @@
                                             <h4 class="mrBTM-10">HOURS OF WORK AND REST</h4>
                                         </div>
                                         <div class="mrBTM-10">
-                                            <div class="pull-left color_blue_Dark">
+                                            @*<div class="pull-left color_blue_Dark">
                                                 Form Number :
                                             </div>
                                             <div class="pull-right color_blue_Dark">
                                                 Revision Number :
-                                            </div>
+                                            </div>*@
                                             <div class="clearfix"></div>
                                         </div>
                                         <div class="mrBTM-10">
