--- a/TM.RestHour/Views/Shared/_pvActiveInactiveCrew.cshtml
+++ b/TM.RestHour/Views/Shared/_pvActiveInactiveCrew.cshtml
@@ -18,7 +18,7 @@
         <!-- Modal content-->
         <div class="modal-content modal-dialog" style="border:7px solid;">
             <div class="modal-header">
-                <h4 class="modal-title " style="text-align:center;">INACTIVATE</h4>
+                <h4 class="modal-title " style="text-align:center;">Modify Service Terms</h4>
                 @*<button type="button" class="close" data-dismiss="modal" onclick="Closexyz();">&times;</button>*@
             </div>
 
