--- a/TM.RestHour/Views/OvertimeCalculation/Index.cshtml
+++ b/TM.RestHour/Views/OvertimeCalculation/Index.cshtml
@@ -127,7 +127,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="form-group" id="week">
+                                <div class="form-group onelinecheckbox" id="week">
                                     <div><input id="Mon" type="checkbox">Mon<span id="Mon-value" class="output" style="color:#fff"></span></div>
                                     <div><input id="Tue" type="checkbox">Tue<span id="Tue-value" class="output" style="color:#fff"></span></div>
                                     <div><input id="Wed" type="checkbox">Wed<span id="Wed-value" class="output" style="color:#fff"></span></div>
@@ -139,12 +139,12 @@
                                 </div>
                             </div>
 
+                            <div class="col-md-12">
+                                <button type="button" class="button1 savebtn" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">Save</button>
+                                </div>
 
-                            <button type="button" class="button1" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">Save</button>
-
-
+                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
