--- a/TM.RestHour/Views/MedicalAssistance/CIRM.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/CIRM.cshtml
@@ -94,13 +94,16 @@
                         <div class="content" id="patientDetails">
                             <div class="col-sm-12 col-xs-12 imo">
                                 <div class="">
-                                    @Html.Partial("_pvPatientDetails")
-                                   
+                                    @*@Html.Partial("_pvPatientDetails")*@
+                                    @Html.Partial("_pvPatientDetails1")
+
+                                    @Html.Partial("_pvPatientDetails2")
+
                                     <div class="row" style="border: 1px solid #eee; padding: 10px;">
 
                                         <div class="col-md-4">
                                             <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                                                <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM('CIRM');">Add</button>
+                                                <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRMNew('CIRM');">Add</button>
                                             </div>
                                         </div>
 
