--- a/TM.RestHour/Views/WellBeing/WellBeingWorkAndRestHours.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingWorkAndRestHours.cshtml
@@ -1,4 +1,5 @@
-﻿@model TM.RestHour.Models.Crew
+﻿@using System.Web;
+@model TM.RestHour.Models.Crew
 
 @{
     ViewBag.Title = "WellBeingWorkAndRestHours";
@@ -46,13 +47,15 @@
 <link href="../Content/jquery-ui.min.css" rel="stylesheet" />
 <link href="../Content/themes/base/datepicker.css" rel="stylesheet" />
 
+<script src="../Scripts/WellBeing.js"></script>
+
 @*@Html.Hidden("Reportsadd9", @Url.Action("GetMonthlyData", "ReportsNCReportByMonth"))
     @Html.Hidden("Showreport19", @Url.Action("GetDayWiseCrewData", "ReportsNCReportByMonth"))
 
     @Html.Hidden("printReport29", @Url.Action("HTML_Report2", "ReportsNCReportByMonth"))*@
 @Html.Hidden("GetNonComplianceDetails", @Url.Action("GetNCDetails", "WellBeing"))
 
-
+@Html.Hidden("MonthlyWorkHours", @Url.Action("MonthlyWorkHours", "WellBeing"))
 
 <div class="">
     <div class="white_card_header">
@@ -130,6 +133,7 @@
                             <th class="tg-amwm" width="1%" bgcolor="#0d417f">29</th>
                             <th class="tg-amwm" width="1%" bgcolor="#0d417f">30</th>
                             <th class="tg-amwm" width="1%">31</th>
+                            <th class="tg-amwm" width="1%">&nbsp;&nbsp;&nbsp;&nbsp;</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -167,6 +171,7 @@
                             <td class="tg-yw4l" id="29" bgcolor="#0d417f"></td>
                             <td class="tg-yw4l" id="30" bgcolor="#0d417f"></td>
                             <td class="tg-yw4l" id="31"></td>
+                            <td class="tg-yw4l"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -201,6 +206,26 @@
         <div id="dvprintForMV"></div>
     </div>
 
+
+
+
+
+
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-dialog" style="width: 1000px;">
+                    @*@Html.Partial("MonthlyWorkHours", new ViewDataDictionary { {"crewId", 42} })*@
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </div>
 
 @section Scripts
@@ -212,12 +237,25 @@
 
 
     <script src="../Scripts/vfs_fonts.js"></script>
-    <script src="../Scripts/WellBeing.js"></script>
+
 
     <script type="text/javascript">
 
 
         $(document).ready(function () {
+
+            function OpenSubReport2()
+            {
+                var url = '@Url.Action("MonthlyWorkHours", "WellBeing")';
+                $('#myModal').load(url);
+                $("#myModal").modal('show');
+            }
+
+
+
+
+
+
             $(function () {
                 $('.monthYearPicker').datepicker({
                     changeMonth: true,
@@ -255,6 +293,9 @@
             var monthyr = currMonth + currYear;
 
             //GetNonComplianceDetailsByCurrentMonth(monthyr);
+
+
+
         });
 
 
