--- a/TM.RestHour/Views/WellBeing/MonthlyWorkHours.cshtml
+++ b/TM.RestHour/Views/WellBeing/MonthlyWorkHours.cshtml
@@ -60,15 +60,16 @@
                     <div class="mrTP-10 mrRHT-10 mrLFT-10">
                         <div class="card-block">
                             <!--<form class="form-horizontal" role="form">
-                                <div class="row">
-                                    <div class="col-sm-4 col-xs-12" id="sideform">
-                                        <div class="form-group">
-                                            <label for="selectCrew">Crew</label>-->
-                                            @*@Html.HiddenFor(model => model.Crew.ID, new { id = "hdnCrewId", value = Model.Crew.ID })*@
-                                            @*@Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })*@
-                                            <!--<input type="hidden" id="hdnCrewId" name="hdnCrewId" value="">
-                                            <input type="hidden" id="hdnMY" name="hdnMY" value="">
-                                        </div>
+        <div class="row">
+            <div class="col-sm-4 col-xs-12" id="sideform">
+                <div class="form-group">
+                    <label for="selectCrew">Crew</label>-->
+                            @Html.HiddenFor(model => model.Crew.ID, new { id = "hdnCrewId", value = Model.Crew.ID })
+                            @Html.HiddenFor(model => model.SelectedMonthYear, new { id = "hdnMY", value = Model.SelectedMonthYear })
+                            @*@Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })*@
+                            @*<input type="hidden" id="hdnCrewId" name="hdnCrewId" value="">*@
+                            @*<input type="hidden" id="hdnMY" name="hdnMY" value="">*@
+                        </div>
                                     </div>
 
                                     <div class="col-sm-4 col-xs-12" id="sideform">
@@ -1601,10 +1602,10 @@
                 return decodeURIComponent(results[2].replace(/\+/g, " "));
             }
 
-            var crewId = getParameterByName("crewId");
-            $('#hdnCrewId').val(crewId);
-            var my = getParameterByName("monthYear");
-            $('#hdnMY').val(my);
+            //var crewId = getParameterByName("crewId");
+            //$('#hdnCrewId').val(crewId);
+            //var my = getParameterByName("monthYear");
+            //$('#hdnMY').val(my);
 
             var loggedInUserId = 0;
             loggedInUserId = $('#hdnCrewId').val();
