--- a/TM.RestHour/Views/WellBeing/WellBeingWorkAndRestHours.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingWorkAndRestHours.cshtml
@@ -211,19 +211,19 @@
 
 
 
-    <div class="modal fade" id="myModal">
+    <!--<div class="modal fade" id="myModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="modal-dialog" style="width: 1000px;">
+                <div class="modal-dialog" style="width: 1000px;">-->
                     @*@Html.Partial("MonthlyWorkHours", new ViewDataDictionary { {"crewId", 42} })*@
 
-                </div>
+                <!--</div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 
 </div>
@@ -244,18 +244,7 @@
 
         $(document).ready(function () {
 
-            function OpenSubReport2()
-            {
-                var url = '@Url.Action("MonthlyWorkHours", "WellBeing")';
-                $('#myModal').load(url);
-                $("#myModal").modal('show');
-            }
-
-
-
-
-
-
+            
             $(function () {
                 $('.monthYearPicker').datepicker({
                     changeMonth: true,
@@ -306,18 +295,9 @@
 
 
 
-
-
-
-
         var valA = "Kindly find enclosed list of applicants who have prayed for financial assistance for the above mentioned category in the financial year under reference.";
 
         $('#txtbodytext').text(valA);
-
-
-
-
-
 
 
         $("#ReportsDate").datepicker({
